@@ -1,5 +1,6 @@
 NOCC 0.9.5	??   ??, 2001
 
+	* Preferences optional, by omitting to set the prefs_dir in conf.php.
 	* Stopped including attachments in replies.
 	* Changed all imap_open to @imap_open to suppress warnings (#477574)
 	* Ensure that magic_quotes_runtime is off to prevent attachment
